--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -40,6 +40,7 @@ user.info = Your orders
 user.details = Details
 user.carinfo = Car details
 user.analog = Unfortunately, we did not find the right car, choose possible travel options
+user.delete = Delete
 
 Railway_Station = Railway Station
 Market_Square = Market Square
@@ -49,6 +50,7 @@ Lychakiv_Cemetery = Lychakiv Cemetery
 car.numberofseats = Number Of seats
 car.category = Category
 car.description = Description
+car.driverName = Driver name
 car.status = Status
 
 economic = economic
