Changed view, added discount information for the client.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,6 +41,9 @@ user.details = Details
 user.carinfo = Car details
 user.analog = Unfortunately, we did not find the right car, choose possible travel options
 user.delete = Delete
+user.discount = Discount
+user.discountTrue = Activated
+user.discountFalse = Deactivated
 
 Railway_Station = Railway Station
 Market_Square = Market Square
